--- a/main.tex
+++ b/main.tex
@@ -205,6 +205,12 @@ Abstract goes here.
 \keywords{Storage systems; ZFS; HPC}
 
 \section{Introduction}
+The University is best served by servicing the missing middle. The missing middle is the void
+between lab level and department level computing resources which order $O(10^1)-O(10^2)$ processors and national resources which order $O(10^5)-O(10^6)$ processors. In the same way that the
+University's mission is to develop and prepare graduates for the workforce, research computing
+at the University should develop and prepare computational researcher's for the utilization of
+facilities at the largest scale (national labs). 
+
 
 \fp{ Test Comment } \bm{ Test Comment } \ketan{ Test Comment }  \kim{ Test Comment }
 
