--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \newcommand{\fp}[1]{ {\textcolor{green}    { **Fangping:  #1 }}}
 \newcommand{\bm}[1]{ {\textcolor{blue}    { **Barry:  #1 }}}
 \newcommand{\kim}[1]{ {\textcolor{cyan}    { **Kim:  #1 }}}
+\newcommand{\ss}[1]{ {\textcolor{yellow}    { **Shervin:  #1 }}}
 \newcommand{\ketan}[1]{ {\textcolor{red}    { **Ketan:  #1 }}}
 \setlength\parindent{0pt}
 \begin{document}
@@ -207,6 +208,13 @@ Abstract goes here.
 \section{Introduction}
 
 \fp{ Test Comment } \bm{ Test Comment } \ketan{ Test Comment }  \kim{ Test Comment }
+
+\ss{The University is best served by servicing the missing middle. The missing middle is the void
+between lab level and department level computing resources which order $O(10^1)-O(10^2)$ processors and national resources which order $O(10^5)-O(10^6)$ processors. In the same way that the
+University's mission is to develop and prepare graduates for the workforce, research computing
+at the University should develop and prepare computational researcher's for the utilization of
+facilities at the largest scale (national labs). }
+
 
 \section{Conclusions}
 
