--- a/main.tex
+++ b/main.tex
@@ -213,7 +213,15 @@ Abstract goes here.
 between lab level and department level computing resources which order $O(10^1)-O(10^2)$ processors and national resources which order $O(10^5)-O(10^6)$ processors. In the same way that the
 University's mission is to develop and prepare graduates for the workforce, research computing
 at the University should develop and prepare computational researcher's for the utilization of
-facilities at the largest scale (national labs). }
+facilities at the largest scale (national labs). 
+
+\begin{itemize}
+\item Outreach
+\item Training (example is Barmeda's workshop, Bio-Stat course for undergraduate students.
+\item Workforce developement
+\item Hacketown
+\end{itemize}
+}
 
 
 \section{Conclusions}
