--- a/main.tex
+++ b/main.tex
@@ -209,7 +209,8 @@ Abstract goes here.
 
 \fp{ Test Comment } \bm{ Test Comment } \ketan{ Test Comment }  \kim{ Test Comment }
 
-\ss{The University is best served by servicing the missing middle. The missing middle is the void
+\ss{
+The University is best served by servicing the missing middle. The missing middle is the void
 between lab level and department level computing resources which order $O(10^1)-O(10^2)$ processors and national resources which order $O(10^5)-O(10^6)$ processors. In the same way that the
 University's mission is to develop and prepare graduates for the workforce, research computing
 at the University should develop and prepare computational researcher's for the utilization of
@@ -221,6 +222,13 @@ facilities at the largest scale (national labs).
 \item Workforce developement
 \item Hacketown
 \end{itemize}
+
+\subsection{Engagement}
+One of the main duties of Consultants at CRC	is meeting with	researchers	in order to better	
+understand their computational needs	 and	 to	 help	 them	 select	 appropriate resources and	
+approaches. These engagements are important for accelerating the	adoption of ACI	
+resources	 in	support	of research endeavors. At Pit, we are also engaged in face-to-face meeting with researchers. For that, regular office hours are assigned so that students can meet with CRC team.
+
 }
 
 
