--- a/main.tex
+++ b/main.tex
@@ -114,6 +114,67 @@ facilities at the largest scale (national labs).}
 \item Hacketown
 \end{itemize}
 
+
+
+\begin{figure}
+    \centering
+    \includegraphics[width=3in]{wordle1}
+    \caption{The wordle of number of users on CRC computational resources.}
+    \label{fig:wordle1}
+\end{figure}
+
+
+\subsection{Workshops}
+
+CRC offers numerous workshops targeting undergraduate and graduate students from all majors. 
+
+\subsection*{Cluster usage training}
+
+\subsection*{Hybrid OpenMP/MPI programming}
+This workshop consists of three days workshops on OpenMP, MPI, and Hybrid OpenMP/MPI parallelism. The course was designed to 
+
+\begin{itemize}
+\item Emerging trends in high-performance computing hardware
+\item Technical reasons for trending towards multicore
+\item Processor architectures are inherently parallel in design
+\item What does shared memory mean from a hardware perspective?
+\item What does distributed memory mean from a hardware perspective?
+\item How about  a hybrid of shared and distributed memory system?
+\item Programming models and why go hybrid MPI-X?
+\item Simple programming problems for thought
+\end{itemize}
+
+
+\subsection*{R programming}
+\subsection*{Python programming through JupyterHub}
+
+\subsection*{C/C++ programming}
+The workshop covers:
+    \begin{itemize}
+    \item Variables, Constants, and Containers
+    \item Flow Control
+    \item Loops
+    \item Functions
+    \item Structures
+    \item File I/O
+    \item Compilation
+    \item Vectorization
+    \end{itemize}
+
+\subsection*{Basic Linux}
+\subsection*{Intel compiler tools}
+\subsection*{Advanced Linux}
+\subsection*{CUDA programming}
+\subsection*{Genomics pipeline}
+
+
+\subsection{Courses}
+
+\subsection*{Bio-Stat course}
+for undergraduate student in XXX semester
+
+
+
 \subsection{Engagement}
 One of the main duties of Consultants at CRC is meeting with	researchers	in order to better	understand their computational needs and to help them select appropriate resources and approaches. These engagements are important for accelerating the adoption of ACI resources in support of research endeavors. At Pit, we are also engaged in face-to-face meeting with researchers. For that, regular office hours are assigned so that students can meet with CRC team.
 
@@ -122,6 +183,23 @@ Compute is
 cheap, storage is not, having all storage backed up is even more expensive. The University needs
 to recognize that this requires significant investment, especially in regards to big data. Moreover,
 an upgrade path and budget to replace and extend these resources needs to be in place.
+
+
+\section{Lessons Learned}
+
+\subsection*{Outreach}
+Advanced computing can benefit many research areas that have not traditionally been routine users of computing beyond the laptop.  While many researchers are vaguely aware of such possibilities, they often do not appreciate the accessibility to powerful computing resources that they have here at Pitt, and perhaps even more importantly, the accessibility they have to expert advice on how to exploit such computing power. A major opportunity for the newly formed Center for Research Computing is to reach out to such researchers and engage them in exploring how we can improve their research productivity through the use of advanced computing.
+
+We have already made significant strides in this effort, including beginning discussions with faculty in economics, nursing, digital humanities, information science, biology, human genetics, public health, biomedical informatics, computer science, statistics, emergency medicine, and the health system library.
+
+We also presented an all-day Symposium on Urban Computing and Machine Learning, which had two plenary speakers, nine invited talks, 24 posters, and around 100 attendees. Advanced Research Computing Symposium is a semi-annual meeting organized by the University of Pittsburgh's CRC. The symposium will consist of invited lectures that cover data intensive computing in astrophysics and computational biophysics aimed at a general audience including scientists and engineers.
+
+
+
+
+\subsection*{Undergraduate students participation}
+In FY17, we supported 330 Pitt faculty and students in their research endeavor from 37 departments. This includes 52 undergraduate users and 132 graduate students. We mentored 2 undergraduates as part of the First Experience in Research program (one continued as a mentee in an independent study course). We also organized an undergraduate course in Bio-Statistics. We expect that we have the balanced participation between graduate toward undergraduate in near future.  
+
 
 \section{Conclusions}
 
