--- a/main.tex
+++ b/main.tex
@@ -7,21 +7,13 @@
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage[colorlinks,bookmarksopen,bookmarksnumbered,citecolor=red,urlcolor=red]{hyperref}
-\newcommand{\fp}[1]{ {\textcolor{green}    { **Fangping:  #1 }}}
-\newcommand{\bm}[1]{ {\textcolor{blue}    { **Barry:  #1 }}}
-\newcommand{\kim}[1]{ {\textcolor{cyan}    { **Kim:  #1 }}}
-\newcommand{\shervin}[1]{ {\textcolor{black}    { **Shervin:  #1 }}}
-\newcommand{\ketan}[1]{ {\textcolor{red}    { **Ketan:  #1 }}}
+
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{Paper Title*\\
-{\footnotesize \textsuperscript{*}Note: Sub-titles are not captured in Xplore and
-should not be used}
-\thanks{Identify applicable funding agency here. If none, delete this.}
-}
+\title{Enabling Computational Literacy Through Center for Research Computing Resources}
 
 \author{\IEEEauthorblockN{1\textsuperscript{st} Given Name Surname}
 \IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
@@ -76,8 +68,6 @@ Storage systems, ZFS, HPC
 
 \section{Introduction}
 
-\fp{ Test Comment } \bm{ Test Comment } \ketan{ Test Comment }  \kim{ Test Comment }
-
 
 The Center for Research Computing (CRC) is the University's closest thing to research computing.
 While CRC maintains the University's largest cluster, the
@@ -100,12 +90,11 @@ national labs and national computing centers.
 \end{itemize}
 
 
-\shervin{
 The University of Pittsburgh is best served by servicing the missing middle. The missing middle is the void
 between lab level and department level computing resources which order $O(10^1)-O(10^2)$ processors and national resources which order $O(10^5)-O(10^6)$ processors. In the same way that the
 University's mission is to develop and prepare graduates for the workforce, research computing
 at the University should develop and prepare computational researcher's for the utilization of
-facilities at the largest scale (national labs).}
+facilities at the largest scale (national labs).
 
 \begin{itemize}
 \item Outreach
@@ -123,6 +112,20 @@ facilities at the largest scale (national labs).}
     \label{fig:wordle1}
 \end{figure}
 
+
+\section{CRC resources}
+The cluster compute nodes were purchased with funds provided by the University, by faculty researchers, and by a NSF Major Research Instrumentation grant. Connectivity between the cluster and main campus is via two 100Gbps fibers and to Internet2 via 100Gbps.  The cluster is comprised of: 104 nodes of 24-core Skylake, 96 nodes of 28-core Intel Xeon Broadwell, 20 nodes of 16-core Intel Xeno Haswell-EP, 32 nodes of 20-core Intel Xeon Haswell, 53 nodes of 12-core Xeon Broadwel, and 8 nodes of 256-core knights landing (KNL). The nodes
+have a range of 12GB to 512GB per node shared memory. Twenty four of the 12-core nodes have a total of 32 general
+purpose GTX1080, 28-Titan X, and 2-K40 GPU accelerator cards in order to support hybrid parallelization efforts. Furthermore, a dedicated node comprised of 28-cores Intel Xeon Broadwell CPUs and 2-GTX1080 GPU card is built to support the visualization effort around the campus.
+The nodes
+are clustered via a fast Intel Omni-Path (OPA) or Infiniband low latency network fabrics in order to enable efficient distributed parallel
+(MPI based) runs. The global storage is comprised of a 130TB Isilon home space (which is backed up), 80 TB of standard NFS home space, a 450 TB Lustre parallel filesystem, and 1PB ZFS filesystem for archival. This infrastructure is designed for future scaling via additional resources funded by research instrumentation grants, internal University funds, or faculty contributions from grants or start-up funds. The cluster operating systems are Redhat Enterprise Linux 6 and 7. A very wide range of major software packages are licensed and installed on the cluster, ranging from quantum mechanics (e.g., Gaussian, Molpro, VASP, CP2K, QMC), to classical mechanics (e.g., NAMD, LAMMPS, Amber), to continuum mechanics (e.g., Abaqus, ANSYS, COMSOL, Lumerical), to genomics analysis suits (e.g., Tophat/Bowtie, CLCb Genomics Server).
+
+\subsection{Computational modeling \& simulation program}
+The computational modeling \& simulation program at the university of Pittsburgh offer its graduate students with an integrated program of creative, independent research, course work, and teaching. Students in this program get heavy doeses of graduate applied mathematics/statistics, computer science and high performance computing using CRC resources. During the past academic year, the center hired one of the CMS Ph.D. graduates as a HPC consultants.  
+
+
+\subsection{Seminars}
 
 \subsection{Workshops}
 
@@ -169,14 +172,45 @@ The workshop covers:
 
 
 \subsection{Courses}
+In  addition  to  the  workshops that provide  resources, we engage in the development of computational courses which counts as the program requirements for student. These courses and the projects included in their syllabus are  growing  need  in  extra  curricular  activities
+and applied courses. Integrating HPC into these project-based
+activities  is  crucial  in  order  to  introduce  students  to  HPC  in
+a setting that allows for exploration. These set of activities encourage student to learn about computational tools and help them toward their career' decision making. Here are the courses offered with collaboration with CRC:
 
-\subsection*{Bio-Stat course}
+\subsection*{Computational Biology}
 for undergraduate student in XXX semester
 
 
 
+\begin{table}[]
+\centering
+    \begin{tabular}{c|c}
+
+      Semester   & Courses \\
+      \hline
+        Fall 2013 & 4 \\
+        Spring 2014 & 4 \\
+        Fall 2014 & 4 \\
+        Spring 2015 & 4 \\
+        Fall 2015 & 4 \\
+        Spring 2016 & 4 \\
+        Fall 2017 & 5 \\
+        Spring 2018 & 6 
+    \end{tabular}
+    \label{tab:my_label}
+    \caption{Courses using CRC resources per semester.}
+\end{table}
+
+\subsection*{Data Science}
+
+\subsection*{Computational Physics}
+.
+.
+.
+
+
 \subsection{Engagement}
-One of the main duties of Consultants at CRC is meeting with	researchers	in order to better	understand their computational needs and to help them select appropriate resources and approaches. These engagements are important for accelerating the adoption of ACI resources in support of research endeavors. At Pit, we are also engaged in face-to-face meeting with researchers. For that, regular office hours are assigned so that students can meet with CRC team.
+One of the main duties of Consultants at CRC is meeting with	researchers	in order to better	understand their computational needs and to help them select appropriate resources and approaches. These engagements are important for accelerating the adoption of ACI resources in support of research endeavors. At Pitt, we are also engaged in face-to-face meeting with researchers. For that, regular office hours are assigned so that students can meet with CRC team.
 
 \subsection{Effort to be done}
 Compute is
@@ -201,9 +235,14 @@ We also presented an all-day Symposium on Urban Computing and Machine Learning, 
 In FY17, we supported 330 Pitt faculty and students in their research endeavor from 37 departments. This includes 52 undergraduate users and 132 graduate students. We mentored 2 undergraduates as part of the First Experience in Research program (one continued as a mentee in an independent study course). We also organized an undergraduate course in Bio-Statistics. We expect that we have the balanced participation between graduate toward undergraduate in near future.  
 
 
-\section{Conclusions}
+\section{Conclusion}
 
-Conclusions go here.
+The CRC resources has been proven to be very effective tool for workshops and courses for the Pitt community. The number of courses has been growing for over past few years. We also would like to build a dedicated cluster for teaching purposes. Integration of computational courses from all the different fields with CRC cyberinfrastructure is a key advantage of the CRC.
+
+CRC's workshops and courses in general research computing and field specific topics continue to expand in order to address the computational needs and techniques used by our users. Theses workshops and courses targeted students and researchers and learn theoretical concepts through extensive hands-on exercises.  
+
+For the future, we will focus on continuing our general workshops and design the hands-on based on the students and researchers' demand. We also would like to cover some of the data-intensive programming tools such as Spark, Hadoop and Machine Learning analysis. 
+
 
 %ACKNOWLEDGMENTS are optional
 \section{Acknowledgments}
