--- a/main.tex
+++ b/main.tex
@@ -15,41 +15,35 @@
 
 \title{Enabling Computational Literacy Through Center for Research Computing Resources}
 
-\author{\IEEEauthorblockN{1\textsuperscript{st} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
+\author{\IEEEauthorblockN{Shervin Sammak}
+\IEEEauthorblockA{\textit{Center for Research Computing} \\
+\textit{University of Pittsburgh}\\
+Pittsburgh, PA \\
+shervin.sammak@pitt.edu}
 \and
-\IEEEauthorblockN{2\textsuperscript{nd} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
+\IEEEauthorblockN{Kim F. Wong}
+\IEEEauthorblockA{\textit{Center for Research Computing} \\
+\textit{University of Pittsburgh}\\
+Pittsburgh, PA \\
+kimwong@pitt.edu}
 \and
-\IEEEauthorblockN{3\textsuperscript{rd} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
+\IEEEauthorblockN{Ketan Maheshwari}
+\IEEEauthorblockA{\textit{Center for Research Computing} \\
+\textit{University of Pittsburgh}\\
+Pittsburgh, PA \\
+ketan@pitt.edu}
 \and
-\IEEEauthorblockN{4\textsuperscript{th} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
+\IEEEauthorblockN{Barry Moore II}
+\IEEEauthorblockA{\textit{Center for Research Computing} \\
+\textit{University of Pittsburgh}\\
+Pittsburgh, PA \\
+bmooreii@pitt.edu}
 \and
-\IEEEauthorblockN{5\textsuperscript{th} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
-\and
-\IEEEauthorblockN{6\textsuperscript{th} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address}
+\IEEEauthorblockN{Fangping Mu}
+\IEEEauthorblockA{\textit{Center for Research Computing} \\
+\textit{University of Pittsburgh}\\
+Pittsburgh, PA \\
+fangping@pitt.edu}
 }
 
 \maketitle
